# ProyectoRecSys

./: README.md  config.env  data_baselines.ipynb  pyproject.toml  rec_finetune_local.ipynb  rec_finetune_local_phi2.ipynb  rec_zeroshot.ipynb  rec_zeroshot_local.ipynb  rec_zeroshot_local_gemma.ipynb  rec_zeroshot_local_gemma1b.ipynb
